Se agregan variables de entorno

--- a/sender/src/main/resources/application.properties
+++ b/sender/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=${PORT_SENDER}
 spring.application.name=softka
-spring.data.mongodb.uri=mongodb+srv://jhonnier98t:HD,nikesb1234@softkacluster.vmkanam.mongodb.net/softka_collection?retryWrites=true&w=majority&appName=SoftkaCluster
+spring.data.mongodb.uri=${URL_MONGO}
 spring.rabbitmq.host=rabbitmq
