--- a/receiver/src/main/resources/application.properties
+++ b/receiver/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-server.port=8082
-spring.data.mongodb.uri=mongodb+srv://jhonnier98t:HD,nikesb1234@softkacluster.vmkanam.mongodb.net/softka_collection?retryWrites=true&w=majority&appName=SoftkaCluster
+server.port=${PORT_RECEIVER}
+spring.data.mongodb.uri=${URL_MONGO}
 spring.rabbitmq.host=rabbitmq
