Se modifica docker compose para variables de entorno

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       - ./sender:/app
     depends_on:
       - rabbitmq
+    env_file:
+      - .env
   receiver:
     build: ./receiver
     container_name: receiver
