--- a/front-auth/nginx.conf
+++ b/front-auth/nginx.conf
@@ -1,8 +1,15 @@
-server {
-    listen 80;
-    location / {
-      root /usr/share/nginx/html/;
-      index index.html index.htm;
-      try_files $uri $uri/ /index.html =404;
-    }
+events {
+    worker_connections 1024;
+}
+http{
+  server {
+      listen 80;
+
+      location / {
+          root /usr/share/nginx/html;
+          index index.html index.htm index.csr.html 50x.html;
+          try_files $uri $uri/ /index.html =404;
+      }
   }
+}
+
