Se deja version final

--- a/front-auth/nginx.conf
+++ b/front-auth/nginx.conf
@@ -7,7 +7,7 @@ http{
 
       location / {
           root /usr/share/nginx/html;
-          index index.html index.htm index.csr.html 50x.html;
+          index index.html index.htm index.csr.html;
           try_files $uri $uri/ /index.html =404;
       }
   }
